--- a/src/App.css
+++ b/src/App.css
@@ -451,6 +451,32 @@
   margin-top: 1rem;
 }
 
+.vote-score {
+  margin: 0 0 0.6rem;
+  font-size: 1.6rem;
+  font-weight: 800;
+  color: #0f172a;
+}
+
+.vote-feedback {
+  margin: 0;
+  font-weight: 700;
+}
+
+.vote-fact {
+  margin: 0;
+  color: #475569;
+  line-height: 1.6;
+}
+
+.vote-feedback.is-correct {
+  color: #166534;
+}
+
+.vote-feedback.is-wrong {
+  color: #b91c1c;
+}
+
 .vote-label {
   display: flex;
   justify-content: space-between;
